2001-11-20  Alexander V. Lukyanov <lav@yars.free.net>

	* DirColors.cc, DirColors.h: move resource definition to make it
	  compile on irix.
	* CmdExec.cc: remove unneeded if's.
	* FileSet.cc: use IdNameCache.
	* TimeDate.cc, TimeDate.h: init Time from SMTask::now, this saves
	  a syscall.
	* Timer.cc, Timer.h: add ctor from TimeDiff.
	* lftp.cc: call IdNameCacheCleanup.
	* IdNameCache.cc, IdNameCache.h: new files.

2001-11-19  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: don't set LC_NUMERIC. It breaks default float settings
	  on certain locales.
	* FileSetOutput.h: make it compile on irix.
	* FileSet.cc, FileSet.h: (SubtractCurr) new method; cosmetics.
	* FtpListInfo.cc: remove FileInfo copying.
	* LocalAccess.cc: remove files of unknown type from the set.
	* misc.cc: use va_copy, should help powerpc.

2001-11-15  Alexander V. Lukyanov <lav@yars.free.net>

	* DirColors.cc, DirColors.h: several new methods.
	* FileAccess.h: add color member to DirList.
	* FileSetOutput.cc: don't print size when it is not defined.
	* FtpDirList.cc, FtpDirList.h, commands.cc: add color ls support.

2001-11-15  Glenn Maynard <g_ld@zewt.org>

	* FindJobDu.cc, FindJobDu.h, commands.cc: du --files implemented.
	* ftpclass.cc, resource.cc: ftp:ssl-allow-anonymous new setting;
	  add host closure for ftp:ssl-* settings.
	* FtpListInfo.cc: optimize unix list parser by not copying FileInfo.

2001-11-15  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: --allow-chown and -a - new options.
	* FileSet.cc, FileSet.h: (LocalChown) new method.
	* commands.cc: add --allow-chown to mirror help.
	* ftpclass.cc, ftpclass.h: fix web-mode.

2001-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: add rank member; sorting by it;
	  SortByPatternList new method of FileSet; get rid of DATE_UNPREC;
	  add date_prec member.
	* FileSetOutput.cc, FtpListInfo.cc, Fish.cc: no more DATE_UNPREC.
	* LocalAccess.cc: fix uploading of empty files to file:.