@@ -510,9 +510,6 @@ bool NetAccess::NextTry()
    }
    retries++;
 
-//    assert(peer!=0);
-//    assert(peer_curr<peer_num);
-
    return true;
 }
 
