@@ -1,3 +1,9 @@
+2001-11-21  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc, ftpclass.h: don't assume peer!=0, copy control socket
+	  name to member peer_sa.
+	* NetAccess.cc: remove obsolete commented out asserts.
+
 2001-11-20  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* DirColors.cc, DirColors.h: move resource definition to make it
